made site responsive
added responsive css to intro img and paragraphs

--- a/index.html
+++ b/index.html
@@ -130,6 +130,16 @@
         cursor: pointer;
         transform: scale(1.1);
       }
+
+      @media (max-width: 600px) {
+        .intro-img {
+          max-width: 200px;
+        }
+
+        p {
+          text-align: center;
+        }
+      }
     </style>
   </head>
   <body>
