--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       }
 
       .container {
-        max-width: 800px;
+        max-width: 600px;
         padding: 25px;
         background-color: rgb(1, 27, 54);
         color: white;
@@ -138,6 +138,10 @@
 
         p {
           text-align: center;
+        }
+
+        .container {
+          max-width: 400px;
         }
       }
     </style>
