--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
         margin: 40px auto;
         font-family: Arial, Helvetica, sans-serif;
         background: radial-gradient(
-          621px at 25.3% 13.8%,
-          rgb(255, 255, 255) 0%,
-          rgb(234, 236, 255) 90%
+          circle at 12.02% -8.22%,
+          rgb(255, 124, 0) 0%,
+          rgb(255, 124, 0) 15.9%,
+          rgb(255, 163, 77) 15.9%,
+          rgb(255, 163, 77) 24.4%,
+          rgb(237, 242, 246) 24.5%,
+          rgb(255, 255, 255) 66%
         );
       }
 
@@ -56,24 +60,34 @@
       footer {
         font-size: 20px;
         text-align: center;
+        color: white;
+        margin-top: 20px;
       }
 
       a {
-        color: rgb(1, 27, 54);
+        color: white;
       }
 
       .container {
         max-width: 600px;
-        padding: 25px;
-        background-color: rgb(1, 27, 54);
+        padding: 15px;
+        background-color: rgb(19, 30, 37);
         color: white;
-        border-radius: 10px;
         display: block;
-        margin: 20px auto;
+        margin: 25px auto;
+      }
+
+      .img-container {
+        max-width: 600px;
+        padding: 15px;
+        display: block;
+        margin: 0px auto;
+        background-color: white;
       }
 
       .intro-img {
         max-width: 400px;
+        padding: 10px;
         display: block;
         margin: 20px auto;
         border: 2px solid;
@@ -92,6 +106,7 @@
         text-align: center;
         font-size: 25px;
         margin: 0px;
+        text-decoration: underline;
       }
 
       .img-grid {
@@ -103,10 +118,14 @@
       }
 
       .dark {
-        background: linear-gradient(
-          112.1deg,
-          rgb(2, 28, 53) 11.4%,
-          rgb(63, 76, 119) 70.2%
+        background: radial-gradient(
+          circle at 12.02% -8.22%,
+          rgb(255, 124, 0) 0%,
+          rgb(255, 124, 0) 15.9%,
+          rgb(255, 163, 77) 15.9%,
+          rgb(255, 163, 77) 24.4%,
+          rgb(19, 30, 37) 24.5%,
+          rgb(19, 30, 37) 66%
         );
         color: white;
       }
@@ -116,14 +135,19 @@
         color: black;
       }
 
+      .dark .img-container {
+        background-color: white;
+        color: black;
+      }
+
       .dark a {
         color: white;
       }
 
       #before-after-img {
-        border-radius: 10px;
-        border: 1px solid white;
+        border: 4px solid black;
         width: 100%;
+        border-radius: 10px;
       }
 
       #before-after-img:hover {
@@ -189,7 +213,8 @@
         purchase). I hope you enjoy them, and are possibly even inspired, to
         make your own spaces feel a little more like home.
       </p>
-      <hr />
+    </div>
+    <div class="img-container">
       <div class="img-grid">
         <span class="before-after">Before</span>
         <span class="before-after">After</span>
