--- a/index.html
+++ b/index.html
@@ -60,12 +60,11 @@
       footer {
         font-size: 20px;
         text-align: center;
-        color: white;
-        margin-top: 20px;
+        margin-top: 5px;
       }
 
       a {
-        color: white;
+        color: black;
       }
 
       .container {
