changed background color
changed to navy

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       button:hover {
         background: #e0dedf;
         cursor: pointer;
+        color: rgb(1, 24, 39);
       }
 
       p {
@@ -61,16 +62,17 @@
         font-size: 20px;
         text-align: center;
         margin-top: 5px;
+        color: rgb(1, 24, 39);
       }
 
       a {
-        color: black;
+        color: rgb(1, 24, 39);
       }
 
       .container {
         max-width: 600px;
         padding: 15px;
-        background-color: rgb(19, 30, 37);
+        background-color: rgb(1, 24, 39);
         color: white;
         display: block;
         margin: 25px auto;
@@ -82,6 +84,7 @@
         display: block;
         margin: 0px auto;
         background-color: white;
+        color: rgb(1, 24, 39);
       }
 
       .intro-img {
@@ -123,28 +126,33 @@
           rgb(255, 124, 0) 15.9%,
           rgb(255, 163, 77) 15.9%,
           rgb(255, 163, 77) 24.4%,
-          rgb(19, 30, 37) 24.5%,
-          rgb(19, 30, 37) 66%
+          rgb(2, 37, 58) 24.5%,
+          rgb(1, 24, 39) 66%
         );
         color: white;
       }
 
       .dark .container {
         background-color: white;
-        color: black;
+        color: rgb(1, 24, 39);
       }
 
       .dark .img-container {
         background-color: white;
-        color: black;
+        color: rgb(1, 24, 39);
       }
 
       .dark a {
         color: white;
       }
 
+      .dark footer {
+        color: white;
+        margin-top: 10px;
+      }
+
       #before-after-img {
-        border: 4px solid black;
+        border: 4px solid rgb(1, 24, 39);
         width: 100%;
         border-radius: 10px;
       }
