--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
         padding: 15px;
         display: block;
         margin: 0px auto;
-        background-color: white;
-        color: rgb(1, 24, 39);
+        background-color: rgb(1, 24, 39);
+        color: white;
       }
 
       .intro-img {
@@ -119,6 +119,18 @@
         transition: transform 200ms ease-in-out;
       }
 
+      #before-after-img {
+        border: 1px solid white;
+        width: 100%;
+        border-radius: 10px;
+        padding: 5px;
+      }
+
+      #before-after-img:hover {
+        cursor: pointer;
+        transform: scale(1.1);
+      }
+
       .dark {
         background: radial-gradient(
           circle at 12.02% -8.22%,
@@ -132,16 +144,6 @@
         color: white;
       }
 
-      .dark .container {
-        background-color: white;
-        color: rgb(1, 24, 39);
-      }
-
-      .dark .img-container {
-        background-color: white;
-        color: rgb(1, 24, 39);
-      }
-
       .dark a {
         color: white;
       }
@@ -151,15 +153,22 @@
         margin-top: 10px;
       }
 
-      #before-after-img {
-        border: 4px solid rgb(1, 24, 39);
-        width: 100%;
-        border-radius: 10px;
+      .dark .container {
+        background-color: white;
+        color: rgb(1, 24, 39);
       }
 
-      #before-after-img:hover {
-        cursor: pointer;
-        transform: scale(1.1);
+      .dark .intro-img {
+        border-color: rgb(1, 24, 39);
+      }
+
+      .dark .img-container {
+        background-color: white;
+        color: rgb(1, 24, 39);
+      }
+
+      .dark #before-after-img {
+        border: 1px solid rgb(1, 24, 39);
       }
 
       @media (max-width: 600px) {
@@ -226,37 +235,37 @@
         <span class="before-after">Before</span>
         <span class="before-after">After</span>
         <img
-          src="images/kitchenbefore1.jpeg"
+          src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/052/374/original/kitchenbefore1.jpeg?1667936838"
           target="_blank"
           alt="kitchen before img"
           id="before-after-img"
         />
         <img
-          src="images/kitchenremodel1.jpeg"
+          src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/052/375/original/kitchenremodel1.jpeg?1667936845"
           target="_blank"
           alt="kitchen remodel img"
           id="before-after-img"
         />
         <img
-          src="images/bathroombefore1.jpeg"
+          src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/052/372/original/bathroombefore1.jpeg?1667936822"
           target="_blank"
           alt="bathroom before img"
           id="before-after-img"
         />
         <img
-          src="images/bathroomremodel1.jpeg"
+          src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/052/373/original/bathroomremodel1.jpeg?1667936831"
           target="_blank"
           alt="bathroom remodel img"
           id="before-after-img"
         />
         <img
-          src="images/livingroombefore1.jpeg"
+          src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/052/377/original/livingroombefore1.jpeg?1667936853"
           target="_blank"
           alt="livingroom before img"
           id="before-after-img"
         />
         <img
-          src="images/livingroomremodel1.jpeg"
+          src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/052/378/original/livingroomremodel1.jpeg?1667936861"
           target="_blank"
           alt="livingroom remodel img"
           id="before-after-img"
